--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,16 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/releases/"
+	}
+	maven {
+		url = "https://maven.shedaniel.me/"
+	}
+	maven {
+		url = "https://jitpack.io"
+	}
 }
 
 dependencies {
@@ -27,8 +32,11 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+	modImplementation include("com.github.devs-immortal:Incubus-Core:${project.incubus_version}")
+
+	// Dev env only
+	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+	modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
 }
 
 processResources {
