--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,18 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
 	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.39
+	yarn_mappings=1.17.1+build.52
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = b0.0.0
+	maven_group = com.pulseflux
+	archives_base_name = pulseflux
 
 # Dependencies
-	fabric_version=0.39.2+1.17
+	fabric_version=0.40.0+1.17
+	incubus_version=1.6.1
+	modmenu_version=2.0.9
+	rei_version=6.0.279-alpha
+	cardinal_version=3.0.0
+	trinkets_version=3.0.2
