--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	fabric_version=0.40.0+1.17
 	incubus_version=1.6.1
+	arrp_version=0.+
 	modmenu_version=2.0.9
 	rei_version=6.0.279-alpha
 	cardinal_version=3.0.0
