--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,15 @@ repositories {
 		url = "https://maven.shedaniel.me/"
 	}
 	maven {
+		name = "Modmenu-Legacy"
+		url = "https://maven.fabricmc.net/io/github/prospector/modmenu/"
+	}
+	maven {
 		url = uri("https://storage.googleapis.com/devan-maven/")
 	}
 	maven {
-		name = 'Ladysnake Mods'
-		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+		name = "Ladysnake Libs"
+		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
 	maven {
 		url 'https://storage.googleapis.com/devan-maven/'
@@ -44,8 +48,10 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modImplementation include("com.github.devs-immortal:Incubus-Core:${project.incubus_version}")
-	modImplementation include("io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${project.cardinal_version}")
-	modImplementation include("io.github.onyxstudios.Cardinal-Components-API:cardinal-components-world:${project.cardinal_version}")
+
+	modImplementation(include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cardinal_version}"))
+	modImplementation(include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cardinal_version}"))
+
 	modImplementation("net.devtech:arrp:${project.arrp_version}")
 	//modImplementation("io.github.astrarre:astrarre-gui-v0-fabric:${project.astrarre_gui_version}")
 
