--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.8
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.1
+	loader_version=0.13.3
 
 # Mod Properties
 	mod_version = b0.0.0
@@ -13,11 +13,10 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = pulseflux
 
 # Dependencies
-	fabric_version=0.44.0+1.18
-	incubus_version=1.6.3
+	fabric_version=0.47.8+1.18.2
+	incubus_version=1.6.6-1.18.2
 	arrp_version=0.+
-	astrarre_gui_version=0.+
 	modmenu_version=3.+
-	rei_version=7.0.+
-	cardinal_version=4.0.0
-	trinkets_version=3.1.0
+	rei_version=8.0.+
+	cardinal_version=4.1.3
+	trinkets_version=3.3.0
