--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
 	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
+	yarn_mappings=1.18.2+build.3
 	loader_version=0.13.3
 
 # Mod Properties
@@ -13,8 +13,8 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = pulseflux
 
 # Dependencies
-	fabric_version=0.47.8+1.18.2
-	incubus_version=1.6.6-1.18.2
+	fabric_version=0.51.1+1.18.2
+	incubus_version=1.18.2-SNAPSHOT
 	arrp_version=0.+
 	modmenu_version=3.+
 	rei_version=8.0.+
