--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.13.3
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.1
+	loader_version=0.14.8
 
 # Mod Properties
 	mod_version = b0.0.0
@@ -13,10 +13,10 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = pulseflux
 
 # Dependencies
-	fabric_version=0.51.1+1.18.2
-	incubus_version=1.18.2-SNAPSHOT
+	fabric_version=0.58.6+1.19.2
+	incubus_version=1.7.0
 	arrp_version=0.+
-	modmenu_version=3.+
-	rei_version=8.0.+
-	cardinal_version=4.1.3
-	trinkets_version=3.3.0
+	modmenu_version=4.+
+	rei_version=9.1.+
+	cardinal_version=5.0.1
+	trinkets_version=3.4.0
