--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,11 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = pulseflux
 
 # Dependencies
-	fabric_version=0.58.6+1.19.2
+	fabric_version=0.59.0+1.19.2
 	incubus_version=1.7.0
 	arrp_version=0.+
 	modmenu_version=4.+
 	rei_version=9.1.+
+	architectury_version=6.+
 	cardinal_version=5.0.1
 	trinkets_version=3.4.0
