--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.13-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -22,6 +22,7 @@ repositories {
 		name = "Modmenu-Legacy"
 		url = "https://maven.fabricmc.net/io/github/prospector/modmenu/"
 	}
+	maven { url 'https://maven.wispforest.io/' } // owo lib
 	maven {
 		url = uri("https://storage.googleapis.com/devan-maven/")
 	}
@@ -52,7 +53,9 @@ dependencies {
 	modImplementation(include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cardinal_version}"))
 	modImplementation(include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cardinal_version}"))
 
+	// highly importante!
 	modImplementation("net.devtech:arrp:${project.arrp_version}")
+	modImplementation "io.wispforest:owo-lib:${project.owo_version}"
 	//modImplementation("io.github.astrarre:astrarre-gui-v0-fabric:${project.astrarre_gui_version}")
 
 	// Dev env only
