--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.1
-	loader_version=0.14.8
+	minecraft_version=1.19.3
+	yarn_mappings=1.19.3+build.3
+	loader_version=0.14.11
 
 # Mod Properties
 	mod_version = b0.0.0
@@ -13,12 +13,11 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = pulseflux
 
 # Dependencies
-	fabric_version=0.69.0+1.19.2
-	incubus_version=ccba573f2e
-	arrp_version=0.+
-	modmenu_version=4.+
-	rei_version=9.1.+
-	architectury_version=6.+
-	cardinal_version=5.0.1
-	trinkets_version=3.4.0
-	owo_version=0.7.3+1.19
+	fabric_version=0.69.1+1.19.3
+	incubus_version=1.8.0-1.19.3-p1
+	arrp_version=0.6.7
+	modmenu_version=5.+
+	rei_version=10.0.+
+	cardinal_version=5.1.0
+	trinkets_version=3.5.0
+	owo_version=0.9.3+1.19.3
