--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ org.gradle.jvmargs=-Xmx2G
 	cardinal_version=5.1.0
 	trinkets_version=3.5.0
 	owo_version=0.9.3+1.19.3
+	mixin_extras_version=0.2.0-beta.8
